fix cards spacing

--- a/src/styles/Common/Input.css
+++ b/src/styles/Common/Input.css
@@ -1,5 +1,5 @@
 .input {
-  margin: .25rem 0;
+  /*margin: .25rem 0;*/
   padding: 0;
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
