--- a/src/styles/ContactCardsContainer/ContactCardsContainer.css
+++ b/src/styles/ContactCardsContainer/ContactCardsContainer.css
@@ -24,8 +24,20 @@
   align-items: center;
 }
 
-.card-item__button_align_right {
+.card-item__row-container {
+  margin: .25rem 0;
+}
+
+.card-item__text_align_right {
   text-align: right;
+}
+
+.card-item_move-up {
+  margin-top: -0.75rem;
+}
+
+.card-item_space-around {
+  margin: 0.75rem 0 0 0.5rem;
 }
 
 @media screen and (min-width: 481px) {
